--- a/the_brand/style.scss
+++ b/the_brand/style.scss
@@ -14,8 +14,6 @@ $colorBackGround: #fff;
 
 
 
-
-
 * {
     margin: 0;
     padding: 0;
@@ -42,9 +40,17 @@ a {
 .center {
     padding-left: calc(50% - ($widthSite / 2));
     padding-right: calc(50% - ($widthSite / 2));
-
 }
 
+.svg {
+    &__caret__down__path {
+        fill: #838383;
+    }
+
+    &__search__path {
+        fill: #a4a4a4;
+    }
+}
 
 
 .header {
@@ -112,6 +118,7 @@ a {
     }
 
     &__drop__down {
+        z-index: 250;
         padding-top: 19px;
         position: absolute;
         top: 37px;
@@ -258,6 +265,7 @@ a {
     }
 
     &__right__cart {
+        visibility: hidden;
         display: flex;
         padding-bottom: 9px;
         flex-direction: column;
@@ -362,9 +370,338 @@ a {
             text-transform: uppercase;
             color: #4a4a4a;
         }
+    }
+}
 
+
+.header__right__div:hover .header__right__cart {
+    visibility: visible;
+}
+
+.navi-box {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+
+}
+
+.menu {
+    word-spacing: 35px;
+
+    &-link-div {
+        word-spacing: 2px;
+    }
+
+    &-list {
+        position: relative;
+        display: inline;
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 26px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #222222;
+
+        &:hover .menu-box {
+            display: flex;
+        }
+    }
+
+    &-box {
+        position: absolute;
+        top: 35px;
+        left: 0;
+        right: auto;
+        background-color: #ffffff;
+        border-radius: 5px;
+        border: 1px solid #e8e8e8;
+        padding: 20px;
+        display: none;
+
+        &-img {
+            position: absolute;
+            // width: 225px;
+            right: 20px;
+            // left: auto;
+            bottom: 20px;
+            // top: auto;
+        }
+    }
+
+    &-title {
+        text-align: start;
+        max-width: 235px;
+        padding-bottom: 8px;
+        margin-bottom: 16px;
+        border-bottom: 1px solid #e8e8e8;
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 32px;
+        font-weight: 400;
+        text-transform: uppercase;
+        letter-spacing: 0.025em;
+        color: #232323;
 
     }
 
+    &-item {
+        width: 235px;
+        margin-right: 46px;
 
+        &:last-of-type {
+            margin-right: 0;
+        }
+    }
+}
+
+.reverse:hover .menu-box {
+    right: 0;
+    left: auto;
+
+    &::before {
+        right: 40px;
+        left: auto;
+    }
+}
+
+.item-link {
+    display: block;
+    text-transform: capitalize;
+    text-decoration: none;
+    text-align: start;
+    font-size: 14px;
+    line-height: 28px;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #646464;
+    word-spacing: 2px;
+
+    &:hover {
+        color: $colorTextPink
+    }
+}
+
+.menu-box::before {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    transform: rotate(45deg);
+    top: -9px;
+    left: 20px;
+    right: auto;
+    border-top: 1px solid #e8e8e8;
+    border-left: 1px solid #e8e8e8;
+    background-color: #fff;
+}
+
+.img-text {
+    width: 70px;
+    position: absolute;
+    right: 30px;
+    bottom: 25px;
+    font-size: 22px;
+    line-height: 28px;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 0.025em;
+    color: #ffffff;
+}
+
+.banner {
+
+    position: relative;
+    z-index: -100;
+
+    &-bckgrnd {
+        display: flex;
+        justify-content: center;
+    }
+
+
+
+    &-text {
+        padding-left: 12px;
+        // border-left: 12px $colorTextPink solid;
+        position: absolute;
+        top: 224px;
+        font-family: Lato;
+        font-size: 60px;
+        line-height: 1.2;
+        font-weight: 900;
+        letter-spacing: 0.025em;
+        color: #222222;
+
+        &::before {
+            content: " ";
+            background: $colorTextPink;
+            width: 12px;
+            height: 117px;
+            position: absolute;
+            top: 15px;
+            left: -12px;
+        }
+
+        &-fs40 {
+            font-size: 40px;
+        }
+
+        &-fs40-pink {
+            font-size: 40px;
+            color: $colorTextPink;
+        }
+    }
+}
+
+.main {
+    margin-top: 98px;
+    margin-bottom: 100px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-auto-flow: dense;
+    row-gap: 20px;
+    column-gap: 20px;
+
+    &-item {
+        position: relative;
+    }
+
+    &-link {
+        &-box {
+            padding: 16px 20px 16px 19px;
+            height: 82px;
+            background-color: #ffffff;
+            position: absolute;
+            top: 26px;
+        }
+    }
+
+
+
+    &-item-1 {
+        grid-row: span 2;
+    }
+
+    &-item-3 {
+        grid-row: span 2;
+    }
+}
+
+.link-box {
+    &-heading {
+        font-family: Lato;
+        font-size: 18px;
+        line-height: 1.2;
+        font-weight: 900;
+        text-transform: uppercase;
+        letter-spacing: 0.025em;
+        color: #222222;
+    }
+
+    &-link {
+        font-size: 30px;
+        color: #f16d7f;
+        font-family: Lato;
+        line-height: 1.2;
+        font-weight: 900;
+        text-transform: uppercase;
+        letter-spacing: 0.025em;
+
+    }
+
+}
+
+.product {
+    margin-bottom: 113px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+
+
+    &-head {
+        text-align: center;
+    }
+
+    &-heading {
+        margin-bottom: 16px;
+        font-family: Lato;
+        font-size: 30px;
+        line-height: 54px;
+        font-weight: 700;
+        letter-spacing: 0.025em;
+        color: #222222;
+    }
+
+    &-head-text {
+        margin-bottom: 60px;
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 54px;
+        font-weight: 400;
+        letter-spacing: 0.025em;
+        color: #9f9f9f;
+    }
+
+
+
+
+    &-box {
+        margin-bottom: 79px;
+        display: grid;
+        grid-template-columns: repeat(4, 261px);
+        column-gap: 32px;
+        row-gap: 39px;
+
+
+
+
+        &-button {
+
+            box-sizing: border-box;
+            border: 1px solid $colorTextPink;
+            width: 212px;
+            height: 48px;
+            background-color: $colorTextPink;
+            transition: .3s;
+
+            &:hover {
+                background-color: #fff;
+            }
+
+            &:hover .product-box-button-text {
+                color: $colorTextPink;
+            }
+
+            &:hover .product-box-button-arrow-path {
+                fill: $colorTextPink;
+            }
+
+
+
+
+            &-text {
+                font-family: Lato;
+                font-size: 16px;
+                line-height: 48px;
+                font-weight: 700;
+                letter-spacing: 0.025em;
+                color: #ffffff;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            &-arrow-svg {
+                margin-left: 9px;
+            }
+
+            &-arrow-path {
+                fill: #ffffff;
+            }
+
+        }
+    }
 }
