--- a/the_brand/style.css
+++ b/the_brand/style.css
@@ -20,6 +20,11 @@ a {
   text-decoration: none;
 }
 
+.pink {
+  color: #f16d7f;
+  background-color: #f16d7f;
+}
+
 .center {
   padding-left: calc(50% - 570px);
   padding-right: calc(50% - 570px);
@@ -321,6 +326,9 @@ a {
 .menu {
   word-spacing: 35px;
 }
+.menu-link {
+  color: #222222;
+}
 .menu-link-div {
   word-spacing: 2px;
 }
@@ -332,7 +340,8 @@ a {
   line-height: 26px;
   font-weight: 700;
   text-transform: uppercase;
-  color: #222222;
+  -webkit-text-decoration-color: #222222;
+          text-decoration-color: #222222;
 }
 .menu-list:hover .menu-box {
   display: flex;
@@ -518,6 +527,83 @@ a {
   align-items: center;
   flex-wrap: nowrap;
 }
+.product-item {
+  position: relative;
+}
+.product-item-pic {
+  width: 100%;
+}
+.product-item-pic-hover {
+  visibility: hidden;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.product-item-button {
+  visibility: hidden;
+  display: flex;
+  align-items: center;
+  pointer-events: none;
+}
+.product-item-button-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: all;
+  width: 123px;
+  height: 39px;
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid #ffffff;
+  position: absolute;
+  top: 98px;
+  bottom: auto;
+  left: 70px;
+  right: auto;
+}
+.product-item-button-link:hover {
+  box-shadow: 0 0 20px 0 #fff;
+  transition: box-shadow 0.2s;
+}
+.product-item-button-cart {
+  margin-right: 8px;
+  width: 23px;
+  height: 22px;
+}
+.product-item-button-text {
+  font-family: Lato;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #ffffff;
+}
+.product-item-heading {
+  margin-top: 19px;
+  margin-left: 14px;
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #222222;
+}
+.product-item-price {
+  margin-top: 17px;
+  margin-left: 13px;
+  margin-bottom: 21px;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #f16d7f;
+}
+.product-item:hover {
+  box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.15);
+}
+.product-item:hover .product-item-button {
+  visibility: visible;
+}
+.product-item:hover .product-item-pic-hover {
+  visibility: visible;
+}
 .product-head {
   text-align: center;
 }
@@ -580,4 +666,288 @@ a {
 }
 .product-box-button-arrow-path {
   fill: #ffffff;
+}
+
+.offer {
+  margin-bottom: 97px;
+  height: 529px;
+  display: flex;
+}
+.offer-left {
+  position: relative;
+  width: 767px;
+  height: 529px;
+  background-image: url(img/offer.png);
+}
+.offer-left-box {
+  text-align: left;
+  position: absolute;
+  top: 146px;
+  left: 39px;
+  z-index: 2;
+}
+.offer-left-text {
+  font-family: Lato;
+  font-size: 54px;
+  line-height: 0.8;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  color: #ffffff;
+}
+.offer-left-text-pink {
+  color: #f16d7f;
+}
+.offer-left-text-fs32 {
+  font-size: 32.2px;
+}
+.offer-right {
+  padding-top: 48px;
+  width: 373px;
+  background-color: #222224;
+}
+.offer-right-compet {
+  display: flex;
+}
+.offer-right-compet-logo {
+  margin-left: 36px;
+  margin-right: 30px;
+  width: 10%;
+  height: 10%;
+}
+.offer-right-compet-title {
+  margin-bottom: 17px;
+  font-family: Lato;
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  color: #fbfbfb;
+}
+.offer-right-compet-text {
+  margin-bottom: 54px;
+  width: 246px;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  color: #fbfbfb;
+}
+
+.subscribe {
+  position: relative;
+  margin-bottom: 100px;
+  height: 438px;
+  background-image: url(img/subscribe-back.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.subscribe-left {
+  position: absolute;
+  top: 111px;
+  display: flex;
+}
+.subscribe-left-photo {
+  width: 100%;
+  height: 100%;
+}
+.subscribe-left-box {
+  margin-left: 28px;
+  margin-bottom: 19px;
+}
+.subscribe-left-text {
+  font-family: Lato;
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 400;
+  font-style: italic;
+  letter-spacing: 0.025em;
+  color: #222224;
+  width: 420px;
+}
+.subscribe-left-author {
+  font-family: Lato;
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  color: #f16d7f;
+}
+.subscribe-left-author-adr {
+  margin-bottom: 41px;
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 300;
+  color: #222224;
+}
+.subscribe-left-progress {
+  display: flex;
+  gap: 13px;
+}
+.subscribe-left-progress-item {
+  z-index: 10;
+  width: 38px;
+  height: 4px;
+  background-color: #d6d6d6;
+}
+.subscribe-left-progress-item2 {
+  background-color: #f16d7f;
+}
+.subscribe-help-box {
+  position: relative;
+}
+.subscribe-right {
+  position: absolute;
+  top: 148px;
+  right: 90px;
+  text-align: center;
+}
+.subscribe-right-title {
+  font-family: Lato;
+  font-size: 24px;
+  line-height: 54px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+  color: #222224;
+}
+.subscribe-right-text {
+  margin-bottom: 35px;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: none;
+  font-family: Lato;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+  color: #222224;
+}
+.subscribe-right-prebutton-input {
+  padding-left: 22px;
+  width: 334px;
+  height: 46px;
+  background-color: #E1E1E1;
+  border: none;
+  border-radius: 25px 0 0 25px;
+  display: flex;
+  align-items: center;
+}
+.subscribe-right-button {
+  width: 100px;
+  height: 46px;
+  color: #FFF;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  background-color: #E05C6E;
+  border-radius: 0px 25px 25px 0;
+  border: none;
+}
+.subscribe-right-button-div {
+  display: flex;
+}
+
+.email-input-bckgrnd {
+  border: none;
+  background-color: #E1E1E1;
+  color: #222224;
+  font-family: Lato;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer {
+  display: flex;
+}
+.footer-logo {
+  display: flex;
+  margin-bottom: 29px;
+  gap: 13px;
+  align-items: center;
+}
+.footer-left-text {
+  margin-right: 64px;
+  width: 430px;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  color: #898989;
+}
+.footer-right-item {
+  margin-left: 64px;
+  margin-bottom: 97px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 80px;
+}
+.footer-right-item-list {
+  list-style: none;
+  -webkit-text-decoration-color: #898989;
+          text-decoration-color: #898989;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  color: #f16d7f;
+  line-height: 59px;
+}
+.footer-right-item-link {
+  display: flex;
+  font-size: 16px;
+  line-height: 42px;
+  letter-spacing: 0.025em;
+  font-weight: 400;
+  color: #898989;
+}
+.footer-right-item-link:hover {
+  color: #f16d7f;
+}
+
+.foo-socials {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
+  height: 79px;
+  background-color: #e6e6e6;
+}
+.foo-socials-text {
+  font-family: Lato;
+  font-size: 16px;
+  line-height: 42px;
+  font-weight: 400;
+  letter-spacing: 0.025em;
+  color: #7a7a7a;
+}
+.foo-socials-ilems {
+  display: flex;
+  gap: 8px;
+}
+.foo-socials-item {
+  display: flex;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  background-color: #ffffff;
+  align-items: center;
+  border: 1px solid #fff;
+  box-sizing: border-box;
+}
+.foo-socials-pic {
+  fill: #b2b2b2;
+}
+.foo-socials .foo-socials-item:hover .foo-socials-pic {
+  fill: #fff;
+  transition: 0.3s;
+}
+.foo-socials .foo-socials-item:hover {
+  background-color: #f16d7f;
+  transition: 0.3s;
+}
+.foo-socials .foo-socials-link:visited .foo-socials-item {
+  opacity: 0.29;
 }/*# sourceMappingURL=style.css.map */
