--- a/the_brand/style.scss
+++ b/the_brand/style.scss
@@ -12,8 +12,6 @@ $colorBackGround: #fff;
     color: #f16d7f;
 }
 
-
-
 * {
     margin: 0;
     padding: 0;
@@ -36,6 +34,11 @@ a {
     text-decoration: none;
 }
 
+.pink {
+    color: $colorTextPink;
+    background-color: $colorTextPink;
+}
+
 
 .center {
     padding-left: calc(50% - ($widthSite / 2));
@@ -51,7 +54,6 @@ a {
         fill: #a4a4a4;
     }
 }
-
 
 .header {
     display: flex;
@@ -388,6 +390,10 @@ a {
 .menu {
     word-spacing: 35px;
 
+    &-link {
+        color: #222222;
+    }
+
     &-link-div {
         word-spacing: 2px;
     }
@@ -400,7 +406,7 @@ a {
         line-height: 26px;
         font-weight: 700;
         text-transform: uppercase;
-        color: #222222;
+        text-decoration-color: #222222;
 
         &:hover .menu-box {
             display: flex;
@@ -620,6 +626,98 @@ a {
     align-items: center;
     flex-wrap: nowrap;
 
+    &-item {
+        position: relative;
+
+        &-pic {
+            width: 100%;
+
+            &-hover {
+                visibility: hidden;
+                position: absolute;
+                // z-index: 5;
+                left: 0;
+                top: 0;
+            }
+        }
+
+        &-button {
+            visibility: hidden;
+            display: flex;
+            align-items: center;
+            pointer-events: none;
+
+            &-link {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                pointer-events: all;
+                width: 123px;
+                height: 39px;
+                background-color: rgba(255, 255, 255, 0.0);
+                border: 1px solid #ffffff;
+                position: absolute;
+                top: 98px;
+                bottom: auto;
+                left: 70px;
+                right: auto;
+
+                &:hover {
+                    box-shadow: 0 0 20px 0 #fff;
+                    transition: box-shadow 0.2s;
+                }
+            }
+
+            &-cart {
+                margin-right: 8px;
+                width: 23px;
+                height: 22px;
+            }
+
+            &-text {
+                font-family: Lato;
+                font-size: 13px;
+                line-height: 1.2;
+                font-weight: 700;
+                color: #ffffff;
+            }
+        }
+
+
+        &-heading {
+            margin-top: 19px;
+            margin-left: 14px;
+            font-size: 13px;
+            line-height: 1.2;
+            font-weight: 400;
+            text-transform: uppercase;
+            color: #222222;
+        }
+
+        &-price {
+            margin-top: 17px;
+            margin-left: 13px;
+            margin-bottom: 21px;
+            font-size: 16px;
+            line-height: 1.2;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: $colorTextPink;
+        }
+
+        &:hover {
+            box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.15);
+        }
+
+        &:hover .product-item-button {
+            visibility: visible;
+
+        }
+
+        &:hover .product-item-pic-hover {
+            visibility: visible;
+        }
+    }
 
     &-head {
         text-align: center;
@@ -645,18 +743,12 @@ a {
         color: #9f9f9f;
     }
 
-
-
-
     &-box {
         margin-bottom: 79px;
         display: grid;
         grid-template-columns: repeat(4, 261px);
         column-gap: 32px;
         row-gap: 39px;
-
-
-
 
         &-button {
 
@@ -704,4 +796,350 @@ a {
 
         }
     }
+}
+
+.offer {
+    margin-bottom: 97px;
+    height: 529px;
+    display: flex;
+
+    &-left {
+        position: relative;
+        width: 767px;
+        height: 529px;
+        background-image: url(img/offer.png);
+
+        &-box {
+            text-align: left;
+            position: absolute;
+            top: 146px;
+            left: 39px;
+            z-index: 2;
+        }
+
+        &-text {
+            font-family: Lato;
+            font-size: 54px;
+            line-height: 0.8;
+            font-weight: 700;
+            letter-spacing: 0.025em;
+            color: #ffffff;
+
+            &-pink {
+                color: #f16d7f;
+            }
+
+            &-fs32 {
+                font-size: 32.2px;
+            }
+        }
+
+
+    }
+
+    &-right {
+        // padding-left: 36px;
+        padding-top: 48px;
+        width: 373px;
+        background-color: #222224;
+
+        &-compet {
+            display: flex;
+
+            &-logo {
+                margin-left: 36px;
+                margin-right: 30px;
+                width: 10%;
+                height: 10%;
+            }
+
+            &-title {
+                margin-bottom: 17px;
+                font-family: Lato;
+                font-size: 20px;
+                line-height: 1.2;
+                font-weight: 700;
+                letter-spacing: 0.025em;
+                color: #fbfbfb;
+            }
+
+            &-text {
+                margin-bottom: 54px;
+                width: 246px;
+                font-size: 14px;
+                line-height: 24px;
+                font-weight: 300;
+                letter-spacing: 0.025em;
+                color: #fbfbfb;
+            }
+        }
+
+    }
+}
+
+.subscribe {
+    position: relative;
+    margin-bottom: 100px;
+    height: 438px;
+    background-image: url(img/subscribe-back.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    &-left {
+        position: absolute;
+        top: 111px;
+        display: flex;
+
+        &-photo {
+            width: 100%;
+            height: 100%;
+
+        }
+
+        &-box {
+            margin-left: 28px;
+            margin-bottom: 19px;
+        }
+
+        &-text {
+            font-family: Lato;
+            font-size: 16px;
+            line-height: 26px;
+            font-weight: 400;
+            font-style: italic;
+            letter-spacing: 0.025em;
+            color: #222224;
+            width: 420px;
+        }
+
+        &-author {
+            font-family: Lato;
+            font-size: 16px;
+            line-height: 26px;
+            font-weight: 700;
+            letter-spacing: 0.025em;
+            color: $colorTextPink;
+
+            &-adr {
+                margin-bottom: 41px;
+                font-size: 12px;
+                line-height: 14px;
+                font-weight: 300;
+                color: #222224;
+            }
+        }
+
+        &-progress {
+            display: flex;
+            gap: 13px;
+
+            &-item {
+                z-index: 10;
+                width: 38px;
+                height: 4px;
+                background-color: #d6d6d6;
+            }
+
+            &-item2 {
+                background-color: $colorTextPink;
+            }
+        }
+    }
+
+    &-help-box {
+        position: relative;
+    }
+
+    &-right {
+
+        position: absolute;
+        top: 148px;
+        right: 90px;
+        text-align: center;
+
+
+        &-title {
+            font-family: Lato;
+            font-size: 24px;
+            line-height: 54px;
+            font-weight: 400;
+            text-transform: uppercase;
+            letter-spacing: 0.025em;
+            color: #222224;
+        }
+
+        &-text {
+            margin-bottom: 35px;
+            font-size: 14px;
+            line-height: 24px;
+            text-transform: none;
+            font-family: Lato;
+            font-weight: 400;
+            text-transform: uppercase;
+            letter-spacing: 0.025em;
+            color: #222224;
+        }
+
+
+        &-prebutton-input {
+            padding-left: 22px;
+            width: 334px;
+            height: 46px;
+            background-color: #E1E1E1;
+            border: none;
+            border-radius: 25px 0 0 25px;
+            display: flex;
+            align-items: center;
+        }
+
+        &-button {
+            width: 100px;
+            height: 46px;
+            color: #FFF;
+            text-align: center;
+            font-size: 14px;
+            font-weight: 400;
+            background-color: #E05C6E;
+            border-radius: 0px 25px 25px 0;
+            border: none;
+
+            &-div {
+                display: flex;
+            }
+
+        }
+    }
+}
+
+.email-input-bckgrnd {
+    border: none;
+    background-color: #E1E1E1;
+    color: #222224;
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+
+}
+
+.footer {
+    display: flex;
+
+    &-logo {
+        display: flex;
+        margin-bottom: 29px;
+        gap: 13px;
+        align-items: center;
+    }
+
+    &-left-text {
+        margin-right: 64px;
+        width: 430px;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 300;
+        letter-spacing: 0.025em;
+        color: #898989;
+    }
+
+    &-right {
+        &-item {
+            margin-left: 64px;
+            margin-bottom: 97px;
+            display: grid;
+            grid-template-columns: (1fr 1fr 1fr);
+            gap: 80px;
+
+            &-list {
+                list-style: none;
+                text-decoration-color: #898989;
+                font-size: 18px;
+                font-weight: 700;
+                letter-spacing: 0.025em;
+                color: $colorTextPink;
+                line-height: 59px;
+            }
+
+            &-link {
+                display: flex;
+                font-size: 16px;
+                line-height: 42px;
+                letter-spacing: 0.025em;
+                font-weight: 400;
+                color: #898989;
+
+                &:hover {
+                    color: $colorTextPink;
+
+                }
+
+            }
+        }
+
+
+    }
+}
+
+.foo-socials {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+    height: 79px;
+    background-color: #e6e6e6;
+
+
+    &-text {
+        font-family: Lato;
+        font-size: 16px;
+        line-height: 42px;
+        font-weight: 400;
+        letter-spacing: 0.025em;
+        color: #7a7a7a;
+    }
+
+    &-ilems {
+        display: flex;
+        gap: 8px;
+
+    }
+
+    &-item {
+        display: flex;
+        justify-content: center;
+        width: 32px;
+        height: 32px;
+        background-color: #ffffff;
+        align-items: center;
+        border: 1px solid #fff;
+        box-sizing: border-box;
+
+    }
+
+    &-pic {
+        fill: #b2b2b2;
+        ;
+    }
+
+    .foo-socials-item:hover .foo-socials-pic {
+        fill: $colorBackGround;
+        transition: 0.3s;
+    }
+
+    .foo-socials-item:hover {
+        background-color: $colorTextPink;
+        transition: 0.3s;
+    }
+
+    .foo-socials-link:visited .foo-socials-item {
+        opacity: 0.29;
+    }
+
+
+
 }
