--- a/the_brand/style.scss
+++ b/the_brand/style.scss
@@ -1143,3 +1143,414 @@ a {
 
 
 }
+
+.top-head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 148px;
+    background-color: #f8f3f4;
+    // position: relative;
+
+    &__heading {
+        font-size: 24px;
+        line-height: 20px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: $colorTextPink;
+
+    }
+}
+
+.breadcrumbs {
+    &__ul {
+        list-style-type: none;
+        display: flex;
+    }
+
+    &__li:not(:last-child)::after {
+        content: '/';
+        padding-left: 8px;
+        padding-right: 8px;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: #636363;
+    }
+
+    &__link {
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: #636363;
+    }
+
+    &__li:last-child .breadcrumbs__link {
+        font-weight: 700;
+        color: #f16d7f;
+        font-size: 14px;
+        line-height: 20px;
+        text-transform: uppercase;
+    }
+}
+
+.product-view {
+
+    display: flex;
+    justify-content: space-between;
+    height: 777px;
+    background-color: #f7f7f7;
+    border: 1px solid #eaeaea;
+    align-items: center;
+}
+
+.view-link {
+
+    &__box {
+        width: 47px;
+        height: 47px;
+        background-color: rgba(42, 42, 42, 0.14);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &_left {
+            height: 24px;
+            width: 15;
+            fill: #ffffff;
+        }
+
+        &_right {
+            height: 24px;
+            width: 15;
+            fill: #ffffff;
+        }
+    }
+}
+
+.product-desc {
+    max-width: 1140px;
+    height: 730px;
+    padding-top: 72px;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+    z-index: 10;
+    background-color: #ffffff;
+    // position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -70px;
+    // left: 0;
+    // right: 0;
+    // top: 1000px;
+
+
+    border: 1px solid #eaeaea;
+
+
+
+
+    &__category-title {
+        margin-bottom: 15px;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 700;
+        color: $colorTextPink;
+
+    }
+
+    &__separator {
+        width: 147px;
+        height: 1px;
+        border: 1px solid #eaeaea;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
+        &_pink {
+            width: 63px;
+            height: 3px;
+            background-color: #ef5b70;
+
+        }
+    }
+
+    &__heading {
+        margin-top: 18px;
+        margin-bottom: 64px;
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: #4d4d4d;
+    }
+
+    &__text {
+        margin-bottom: 28px;
+        width: 640px;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 300;
+        color: #5e5e5e;
+    }
+
+    &__material-designer {
+        display: flex;
+        gap: 44px;
+        margin-bottom: 37px;
+    }
+
+    &__material {
+        display: flex;
+    }
+
+    &__designer {
+        display: flex;
+    }
+
+    &__property {
+        margin-right: 4px;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #b9b9b9;
+
+        &_meaning {
+            font-size: 14px;
+            line-height: 24px;
+            font-weight: 700;
+            color: #2f2f2f;
+        }
+    }
+
+    &__price {
+        font-size: 24px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #ef5b70;
+
+        &_separator {
+            margin-top: 42px;
+            margin-bottom: 64px;
+            width: 642px;
+            border-bottom: 1px solid #eaeaea;
+        }
+    }
+}
+
+.product-selection {
+    display: flex;
+    gap: 52px;
+
+    &__link {
+        background: none;
+        color: inherit;
+        border: none;
+        padding: 0;
+        outline: inherit;
+    }
+
+    &__title {
+        margin-bottom: 16px;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #2f2f2f;
+    }
+
+    &__color {
+        padding-right: 9px;
+        padding-left: 14px;
+        width: 144px;
+        height: 35px;
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+        display: flex;
+        align-items: center;
+
+
+
+        &_logo {
+            margin-right: 11px;
+            width: 12px;
+            height: 12px;
+            background-color: #ef5b70;
+        }
+
+        &_name {
+            margin-right: auto;
+            font-size: 13px;
+            line-height: 24px;
+            font-weight: 400;
+            color: #bcbcbc;
+        }
+
+        &_arrow {
+            font-size: 14px;
+            line-height: 23px;
+            font-weight: 400;
+            fill: #bcbcbc;
+        }
+    }
+
+    &__size {
+
+        padding-left: 14px;
+        padding-right: 9px;
+        width: 144px;
+        height: 35px;
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+        display: flex;
+        align-items: center;
+
+        &_logo {
+            display: none;
+        }
+
+        &_name {
+            margin-right: auto;
+            font-size: 13px;
+            line-height: 24px;
+            font-weight: 400;
+            color: #bcbcbc;
+        }
+
+        &_arrow {
+            font-size: 14px;
+            line-height: 23px;
+            font-weight: 400;
+            fill: #bcbcbc;
+        }
+    }
+
+    &__quantity {
+        padding-right: 9px;
+        padding-left: 14px;
+        width: 144px;
+        height: 35px;
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+        display: flex;
+        align-items: center;
+
+        &_input {
+            border-style: none;
+            outline-style: none;
+            font-size: 14px;
+            line-height: 24px;
+            font-weight: 400;
+            color: #bcbcbc;
+            text-decoration: #bcbcbc;
+            ;
+        }
+
+    }
+
+    &__button-box {
+        margin-top: 28px;
+        width: 537px;
+        height: 55px;
+        background-color: #ffffff;
+        border: 1px solid #ef5b70;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:hover {
+            background-color: $colorTextPink;
+            transition: .3s;
+        }
+
+        &:hover .product-selection__button_text {
+            color: $colorBackGround;
+            transition: .3s;
+        }
+
+        &:hover .product-selection__button_pic {
+            fill: $colorBackGround;
+            transition: .3s;
+        }
+
+    }
+
+    &__button {
+        display: flex;
+        align-items: center;
+        justify-items: center;
+        gap: 15px;
+
+        &_text {
+            font-family: Lato;
+            font-size: 16px;
+            line-height: 1.2;
+            font-weight: 700;
+            color: #ef5b70;
+        }
+
+        &_pic {
+            fill: $colorTextPink;
+        }
+    }
+
+}
+
+.product-offers {
+    padding-top: 120px;
+    padding-bottom: 72px;
+
+    &__items {
+        display: flex;
+        gap: 32px;
+    }
+
+
+    &__title {
+        margin-bottom: 72px;
+        font-size: 24px;
+        line-height: 20px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: #4d4d4d;
+        text-align: center;
+    }
+
+    &__item {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 21px;
+
+        &_pic-box {
+            width: 261px;
+            height: 280px;
+            background-color: #e9e9e9;
+        }
+
+        &_title {
+            margin-top: 18px;
+            margin-left: 15px;
+            margin-bottom: 17px;
+            font-size: 14px;
+            line-height: 1.2;
+            font-weight: 400;
+            text-transform: uppercase;
+            color: #6f6e6e;
+        }
+
+        &_price {
+            margin-left: 14px;
+            font-size: 16px;
+            line-height: 1.2;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: $colorTextPink;
+        }
+    }
+
+}
