--- a/the_brand/style.css
+++ b/the_brand/style.css
@@ -1290,4 +1290,36 @@ a {
   font-weight: 700;
   text-transform: uppercase;
   color: #f16d7f;
+}
+
+.offer-right-prod {
+  display: flex;
+  gap: 80px;
+  background-color: #222224;
+}
+.offer-right-prod__compet {
+  text-align: center;
+}
+.offer-right-prod__compet_logo {
+  margin: 89px 30px 32px 36px;
+  width: 15%;
+  height: 10%;
+}
+.offer-right-prod__compet_title {
+  margin-bottom: 17px;
+  font-family: Lato;
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  color: #fbfbfb;
+}
+.offer-right-prod__compet_text {
+  margin-bottom: 114px;
+  width: 312px;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  color: #fbfbfb;
 }/*# sourceMappingURL=style.css.map */
